@@ -31,7 +31,12 @@ if (WIN32)
 else (WIN32)
 	set (BINDIR bin)
 	set (SBINDIR sbin)
-	set (SYSCONFDIR etc/mosquitto)
+	if (${CMAKE_INSTALL_PREFIX} STREQUAL /usr)
+		set (SYSCONFDIR /etc/mosquitto)
+	else (${CMAKE_INSTALL_PREFIX} STREQUAL /usr)
+		set (SYSCONFDIR etc/mosquitto)
+	endif (${CMAKE_INSTALL_PREFIX} STREQUAL /usr)
+	
 	set (LIBDIR lib${LIB_SUFFIX})
 	set (INCLUDEDIR include)
 	set (DATAROOTDIR share)
